# Active-ClassTeacher-Agent

./: .gitignore  Classroom_App_Tutorial.docx  README.md  agent.md  app.py  cli.py  pyproject.toml  requirements.txt  skills.md
analytics/: charts.py  scoring.py
classroom_report/: __init__.py  analytics.py  api.py  badges.py  cli.py  config.py  excel.py  graph.py  loaders.py  ollama.py  reports.py  slides.py  streamlit_app.py
classroom_report/agent/: __init__.py  graph.py  loaders.py  state.py
classroom_report/analytics/: __init__.py  charts.py  scoring.py
classroom_report/api/: main.py
classroom_report/llm/: __init__.py  ollama_client.py
classroom_report/parsers/: responses.py  slides_pdf.py
classroom_report/pipeline/: __init__.py  ingest.py
classroom_report/reports/: __init__.py  homework_doc.py  summary_doc.py
docs/: multiagent_flowchart.mmd
llm/: ollama_client.py
parsers/: __init__.py  responses.py  slides_pptx.py
scripts/: generate_tutorial_doc.py  render_mermaid_png.py
templates/: README.txt  lecture_example.pptx  poll_responses_example.xlsx
